net.http.server: Re-fire unhandled HEAD requsts as GET events (fixes #1447)
BC: This overloads the GET event.

Previous commit ensures HEAD requests are sent without a body.

--- a/CHANGES
+++ b/CHANGES
@@ -11,6 +11,7 @@ TRUNK
 -   Rewritten migrator
 -   SCRAM-SHA-256
 -   Bi-directional server-to-server (XEP-0288)
+-   Built-in HTTP server now handles HEAD requests
 
 0.11.0
 ======
