--- a/CHANGES
+++ b/CHANGES
@@ -12,6 +12,7 @@ TRUNK
 -   SCRAM-SHA-256
 -   Bi-directional server-to-server (XEP-0288)
 -   Built-in HTTP server now handles HEAD requests
+-   MUC presence broadcast controls
 
 0.11.0
 ======
