mod_net_multiplex: Add support for using ALPN
Potentially a bit more efficient since it can jump to the selected
protocol on connect instead of waiting for some data to look at.

Adds a 'protocol' field to net providers for this purpose.

--- a/CHANGES
+++ b/CHANGES
@@ -13,6 +13,7 @@ TRUNK
 -   Bi-directional server-to-server (XEP-0288)
 -   Built-in HTTP server now handles HEAD requests
 -   MUC presence broadcast controls
+-   ALPN support in mod\_net\_multiplex
 
 0.11.0
 ======
