CHANGES: Mention deprecation of 'daemonize' option

--- a/CHANGES
+++ b/CHANGES
@@ -14,6 +14,7 @@ TRUNK
 -   Built-in HTTP server now handles HEAD requests
 -   MUC presence broadcast controls
 -   ALPN support in mod\_net\_multiplex
+-   `daemonize` option deprecated
 
 0.11.0
 ======
