--- a/CHANGES
+++ b/CHANGES
@@ -15,6 +15,7 @@ TRUNK
 -   MUC presence broadcast controls
 -   ALPN support in mod\_net\_multiplex
 -   `daemonize` option deprecated
+-   SASL DIGEST-MD5 removed
 
 0.11.0
 ======
