prosodyctl: Add external connectivity check based on observe.jabber.network
This uses the (experimental) observe.jabber.network API to
perform external connectivity checks. The idea is to complement
the checks prosodyctl can already do with a (nearly) complete
s2s/c2s handshake from a remote party to test the entire stack.

--- a/CHANGES
+++ b/CHANGES
@@ -29,6 +29,7 @@ TRUNK
 -   Direct TLS support (c2s and incoming s2s)
 -   Offline messages aren't sent to MAM clients
 -   Network backend server_select deprecated
+-   Check connectivity via observe.jabber.network
 
 0.11.0
 ======
