CHANGES: Add util.error

--- a/CHANGES
+++ b/CHANGES
@@ -18,6 +18,7 @@ TRUNK
 -   SASL DIGEST-MD5 removed
 -   Switch to libunbound for DNS queries
 -   mod_external_services (XEP-0215)
+-   util.error for encapsulating errors
 
 0.11.0
 ======
