mod_http_file_share: Let's write another XEP-0363 implementation
This variant is meant to improve upon mod_http_upload in some ways:

* Handle files much of arbitrary size efficiently
* Allow GET and PUT URLs to be different
* Remember Content-Type sent by client
* Avoid dependency on mod_http_files
* Built-in way to delegate storage to another httpd

--- a/CHANGES
+++ b/CHANGES
@@ -20,6 +20,7 @@ TRUNK
 -   mod_external_services (XEP-0215)
 -   util.error for encapsulating errors
 -   MUC: support for XEP-0421 occupant identifiers
+-   mod_http_file_share: File sharing via HTTP (XEP-0363)
 
 0.11.0
 ======
