CHANGES: Add Direct TLS support
Since there is now support for SNI with per-host certificates as well as
support in `prosodyctl check dns`.

Previous "support" was just the 'legacy_ssl' option, which didn't have
much other supporting code.

--- a/CHANGES
+++ b/CHANGES
@@ -25,6 +25,7 @@ TRUNK
 -   statistics scheduling can be done by plugin
 -   mod_server_contact_info now loaded on components if enabled
 -   Statistics now based on OpenMetrics
+-   Direct TLS support
 
 0.11.0
 ======
