net.server_epoll: Add support for TCP Fast Open
Requires a patch to LuaSocket adding this socket option,
https://github.com/lunarmodules/luasocket/pull/378

sysctl tweaks
net.ipv4.tcp_fastopen=3
net.ipv4.tcp_fastopen_blackhole_timeout_sec = 0
net.ipv4.tcp_fastopen_key=$(</proc/sys/kernel/random/uuid)

Disabled by default since it an advanced performance tweak unlikely to
be needed by most servers.

--- a/CHANGES
+++ b/CHANGES
@@ -11,6 +11,7 @@ TRUNK
 
 - Honour 'weight' parameter during SRV record selection
 - Support for RFC 8305 "Happy Eyeballs" to improve IPv4/IPv6 connectivity
+- Support for TCP Fast Open in server_epoll (pending LuaSocket support)
 
 0.12.0
 ======
