Revert 926d53af9a7a: Restore DANE support
Previous commit adds a workaround, so this doesn't mutate global state
anymore, only per-connection 'extra' state as originally intended.

--- a/CHANGES
+++ b/CHANGES
@@ -17,6 +17,7 @@ TRUNK
 -   `daemonize` option deprecated
 -   SASL DIGEST-MD5 removed
 -   Switch to libunbound for DNS queries
+-   DANE Support (low-level network layer)
 -   mod_external_services (generic XEP-0215)
 -   mod_turn_external for easy STUN+TURN XEP-0215 setup
 -   util.error for encapsulating errors
