mod_mam: Suppress offline message broadcast for MAM clients
MattJ on 09:34:24
> Zash: I think as a first step, offline messages should not be sent to
> clients that request MAM

https://chat.modernxmpp.org/log/modernxmpp/2021-08-31#2021-08-31-8518a542bd283686

--- a/CHANGES
+++ b/CHANGES
@@ -27,6 +27,7 @@ TRUNK
 -   mod_server_contact_info now loaded on components if enabled
 -   Statistics now based on OpenMetrics
 -   Direct TLS support
+-   Offline messages aren't sent to MAM clients
 
 0.11.0
 ======
