net.server_select: Deprecate and warn about it
To be removed in the future, but not right now. Give the log warning a
chance to prod anyone who might have network_backend="select" in their
config first.

There's also things built on Verse which uses server_select.lua, which
will need to be updated somehow.

--- a/CHANGES
+++ b/CHANGES
@@ -28,6 +28,7 @@ TRUNK
 -   Statistics now based on OpenMetrics
 -   Direct TLS support
 -   Offline messages aren't sent to MAM clients
+-   Network backend server_select deprecated
 
 0.11.0
 ======
