--- a/CHANGES
+++ b/CHANGES
@@ -31,6 +31,7 @@ TRUNK
 -   Network backend server_select deprecated
 -   Check connectivity via observe.jabber.network
 -   LDAP authentication (mod_auth_ldap)
+-   mod_auth_cyrus removed
 
 0.11.0
 ======
