mod_s2s: Enable outgoing Direct TLS connections
Makes it faster by cutting out the roundtrips involved in <starttls/>,
at the cost of making an additional SRV lookup.

Since we already ignore a missing <starttls/> offer and try anyway there
is not much difference in security. The fact that XMPP is used and the
hostnames involved might still be visible until the future Encrypted
ClientHello extension allows hiding those too.

--- a/CHANGES
+++ b/CHANGES
@@ -27,7 +27,7 @@ TRUNK
 -   SNI support (including automatic certificate selection)
 -   ALPN support in mod_net_multiplex
 -   DANE support in low-level network layer
--   Direct TLS support (c2s and incoming s2s)
+-   Direct TLS support (c2s and s2s)
 -   SCRAM-SHA-256
 -   Direct TLS (including https) certificates updated on reload
 -   Pluggable authorization providers (mod_authz_)
