util.dependencies: Refer to 'apt' instead of 'apt-get'
The more modern and user friendly frontend, should be in every supported
version of Debian and Ubuntu by now

--- a/INSTALL
+++ b/INSTALL
@@ -15,7 +15,7 @@ before you can build it. These are:
     -   [GNU libidn](http://www.gnu.org/software/libidn/)
 
 These can be installed on Debian/Ubuntu by running
-`apt-get build-dep prosody` or by installing the packages
+`apt build-dep prosody` or by installing the packages
 `liblua5.4-dev`, `libicu-dev` and `libssl-dev`.
 
 On Mandriva try:
