mod_http: Use RFC 7239 Forwarded header to find original client IP
Prefer over X-Forwarded-* since it has an actual specification.

Main practical difference is that Forwarded may carry more properties
than only the IP address since it is a structured header.

Since we parse it into an array, it is easier to do the logical thing
and iterate backwards trough proxies until an untrusted one is
encountered. Compare the handling of X-Forwarded-For.

The 'secure' field now accounts for the full chain of proxies, which
must be secure all the way to be considered secure.

--- a/CHANGES
+++ b/CHANGES
@@ -42,6 +42,7 @@ TRUNK
 - mod_blocklist: New option 'migrate_legacy_blocking' to disable migration from mod_privacy
 - Ability to use SQLite3 storage using LuaSQLite3 instead of LuaDBI
 - Moved all modules into the Lua namespace `prosody.`
+- Forwarded header from RFC 7239 supported
 
 ## Removed
 
