CHANGES: Mention performance improvements for internal archives
Specifically the index and more efficient delete.

These are however still in need of testing.

--- a/CHANGES
+++ b/CHANGES
@@ -35,6 +35,7 @@ TRUNK
 ### Storage
 
 - New 'keyval+' combined keyval/map store type
+- Performance improvements in internal archive stores
 
 ## Changes
 
