core.moduleapi: Add :get_option_period for parsing time intervals
E.g. for use in mod_mam and others that take an amount of time before
some (usually cleanup) action is taken.

--- a/CHANGES
+++ b/CHANGES
@@ -42,6 +42,7 @@ TRUNK
 
 - Config interface API can require that string values be picked from a provided set
 - Acceptable interval can be specified for number options
+- Method for parsing time periods / intervals from config
 
 ## Changes
 
