mod_s2s_auth_dane_in: DANE support for s2sin
Complements the DANE support for outgoing connections included in
net.connect

--- a/CHANGES
+++ b/CHANGES
@@ -32,6 +32,7 @@ TRUNK
 - Implement 'tls-server-end-point' channel binding
 - New role and permissions framework and API
 - Ability to disable and enable user accounts
+- Full DANE support for s2s
 
 ### Storage
 
